[gd_scene load_steps=13 format=2]

[ext_resource path="res://Script/DeathArea.gd" type="Script" id=1]
[ext_resource path="res://Script/Player2.gd" type="Script" id=2]
[ext_resource path="res://tiles.tres" type="TileSet" id=3]
[ext_resource path="res://Sprite/rope.png" type="Texture" id=4]
[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Script/Rope.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.5193, 23.7756 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.2296, 63.5145 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 339.086, 46.6279 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 116.983, 21.2655 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 333.899, 47.7643 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 269.375, 14.4959 )

[node name="World" type="Node2D"]
position = Vector2( 5.03967, -3.77979 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -524307, 1, 0, -524306, 1, 0, -524305, 1, 0, -524304, 1, 0, -524303, 1, 0, -524302, 1, 0, -524301, 1, 0, -524300, 1, 0, -524299, 1, 0, -524298, 1, 0, -524297, 1, 0, -524296, 1, 0, -524295, 1, 0, -524294, 1, 0, -524293, 1, 0, -524292, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 1, 0, -589814, 1, 0, -589813, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 1, 0, -589808, 1, 0, -589807, 1, 0, -589806, 1, 0, -589805, 1, 0, -589804, 1, 0, -589803, 1, 0, -589802, 1, 0, -589801, 1, 0, -589800, 1, 0, -589799, 1, 0, -589798, 1, 0, -589797, 1, 0, -589796, 1, 0, -589795, 1, 0, -589794, 1, 0, -589793, 1, 0, -589792, 1, 0, -589791, 1, 0, -589790, 1, 0, -589789, 1, 0, -589788, 1, 0, -589787, 1, 0, -589786, 1, 0, -589785, 1, 0, -458771, 1, 0, -524249, 1, 0, -393235, 1, 0, -458713, 1, 0, -327699, 1, 0, -327695, 0, 0, -327694, 0, 0, -327693, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -393177, 1, 0, -262163, 1, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327660, 0, 0, -327659, 2, 0, -327658, 2, 0, -327657, 2, 0, -327656, 2, 0, -327655, 2, 0, -327654, 2, 0, -327653, 2, 0, -327652, 2, 0, -327651, 2, 0, -327650, 0, 0, -327648, 0, 0, -327647, 0, 0, -327646, 0, 0, -327644, 0, 0, -327643, 0, 0, -327642, 0, 0, -327641, 1, 0, -196627, 1, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262124, 1, 0, -262123, 1, 0, -262122, 1, 0, -262121, 1, 0, -262120, 1, 0, -262119, 1, 0, -262118, 1, 0, -262117, 1, 0, -262116, 1, 0, -262115, 1, 0, -262114, 1, 0, -262108, 1, 0, -262107, 1, 0, -262106, 1, 0, -262105, 1, 0, -131091, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196569, 1, 0, -65555, 1, 0, -65538, 1, 0, -65537, 1, 0, -131033, 1, 0, -19, 1, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -2, 1, 0, -1, 1, 0, -65497, 1, 0, 65517, 1, 0, 65534, 1, 0, 65535, 1, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 39, 1, 0, 131053, 1, 0, 131070, 1, 0, 131071, 1, 0, 65549, 0, 0, 65550, 0, 0, 65552, 1, 0, 65575, 1, 0, 196589, 1, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196606, 1, 0, 196607, 1, 0, 131072, 0, 0, 131073, 0, 0, 131076, 0, 0, 131088, 1, 0, 131111, 1, 0, 262125, 1, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262137, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196612, 1, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196624, 1, 0, 196628, 0, 0, 196632, 0, 0, 196636, 0, 0, 196646, 0, 0, 196647, 1, 0, 327661, 1, 0, 327673, 1, 0, 327675, 0, 0, 327676, 0, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262148, 1, 0, 262160, 1, 0, 262162, 0, 0, 262163, 0, 0, 262164, 1, 0, 262167, 0, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 0, 0, 262182, 1, 0, 262183, 1, 0, 393197, 1, 0, 393209, 1, 0, 393214, 1, 0, 393215, 1, 0, 327684, 1, 0, 327696, 1, 0, 327700, 1, 0, 327718, 1, 0, 327719, 1, 0, 458733, 1, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458745, 1, 0, 458746, 2, 0, 458747, 2, 0, 458748, 2, 0, 458749, 2, 0, 458750, 1, 0, 458751, 1, 0, 393220, 1, 0, 393232, 1, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 1, 0, 393255, 1, 0, 524269, 1, 0, 524270, 2, 0, 524271, 2, 0, 524272, 2, 0, 524273, 2, 0, 524274, 2, 0, 524275, 2, 0, 524276, 2, 0, 524277, 2, 0, 524278, 2, 0, 524279, 2, 0, 524280, 2, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 0, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 1, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458783, 2, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 589805, 1, 0, 589806, 2, 0, 589807, 2, 0, 589808, 2, 0, 589809, 2, 0, 589810, 2, 0, 589811, 2, 0, 589812, 2, 0, 589813, 2, 0, 589814, 2, 0, 589815, 2, 0, 589816, 2, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 2, 0, 524310, 2, 0, 524311, 2, 0, 524312, 2, 0, 524313, 2, 0, 524314, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 2, 0, 524318, 2, 0, 524319, 2, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 655341, 1, 0, 655342, 1, 0, 655343, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 34.1905, 417.823 )
script = ExtResource( 2 )

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2( 533.169, 488.271 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 10.1021, -6.73477 )
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Rope" type="Area2D" parent="YSort"]
position = Vector2( 542.028, 319.868 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope"]
texture = ExtResource( 4 )

[node name="Rope6" type="Area2D" parent="YSort"]
position = Vector2( -355.453, -65.8704 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope6"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope6"]
scale = Vector2( 1, 0.957 )
texture = ExtResource( 4 )

[node name="Rope3" type="Area2D" parent="YSort"]
position = Vector2( 1378.49, -448.768 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope3"]
texture = ExtResource( 4 )

[node name="Rope4" type="Area2D" parent="YSort"]
position = Vector2( 1463.63, -448.946 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope4"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope4"]
texture = ExtResource( 4 )

[node name="Rope5" type="Area2D" parent="YSort"]
position = Vector2( 1545.99, -448.475 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope5"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope5"]
texture = ExtResource( 4 )

[node name="Rope7" type="Area2D" parent="YSort"]
position = Vector2( 1630.24, -448.653 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope7"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope7"]
texture = ExtResource( 4 )

[node name="Rope8" type="Area2D" parent="YSort"]
position = Vector2( 1717.72, -448.475 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope8"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope8"]
texture = ExtResource( 4 )

[node name="Rope11" type="Area2D" parent="YSort"]
position = Vector2( 1809.53, -449.36 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope11"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope11"]
texture = ExtResource( 4 )

[node name="Rope12" type="Area2D" parent="YSort"]
position = Vector2( 1895.96, -449.683 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Rope12"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="YSort/Rope12"]
texture = ExtResource( 4 )

[node name="DeathArea2" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea2"]
position = Vector2( -798.518, 515.355 )
shape = SubResource( 3 )

[node name="DeathArea3" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea3"]
position = Vector2( -256.473, 419.607 )
shape = SubResource( 4 )

[node name="DeathArea4" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea4"]
position = Vector2( 1697.06, 514.774 )
shape = SubResource( 5 )

[node name="DeathArea5" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea5"]
position = Vector2( 1637.65, -284.678 )
shape = SubResource( 6 )
[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="YSort/Rope" to="YSort/Rope" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope" to="YSort/Rope" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope6" to="YSort/Rope6" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope6" to="YSort/Rope6" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope3" to="YSort/Rope3" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope3" to="YSort/Rope3" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope4" to="YSort/Rope4" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope4" to="YSort/Rope4" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope5" to="YSort/Rope5" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope5" to="YSort/Rope5" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope7" to="YSort/Rope7" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope7" to="YSort/Rope7" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope8" to="YSort/Rope8" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope8" to="YSort/Rope8" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope11" to="YSort/Rope11" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope11" to="YSort/Rope11" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="YSort/Rope12" to="YSort/Rope12" method="_on_Rope_body_entered"]
[connection signal="body_exited" from="YSort/Rope12" to="YSort/Rope12" method="_on_Rope_body_exited"]
[connection signal="body_entered" from="DeathArea2" to="DeathArea2" method="_on_DeathArea2_body_entered"]
[connection signal="body_entered" from="DeathArea3" to="DeathArea3" method="_on_DeathArea3_body_entered"]
[connection signal="body_entered" from="DeathArea4" to="DeathArea4" method="_on_DeathArea4_body_entered"]
[connection signal="body_entered" from="DeathArea5" to="DeathArea5" method="_on_DeathArea5_body_entered"]
